# async-document-pipeline

./: .env.example  .gitignore  README.draft.md  README.md  docker-compose.yml
contracts/: callback-payload.schema.json  dispatch-payload.schema.json
core-api/: Dockerfile  build.gradle  gradlew  gradlew.bat  settings.gradle
core-api/api/: build.gradle
core-api/api/src/main/java/com/asyncpipeline/api/: ApiApplication.java
core-api/api/src/main/resources/: application.yml
core-api/infra-queue/: build.gradle
core-api/infra-storage/: build.gradle
core-api/job/: build.gradle
core-api/support/: build.gradle
core-api/support/src/main/java/com/asyncpipeline/support/: IdGenerator.java
db/migration/: V001__create_documents_and_jobs.sql  V002__create_artifacts_and_callback_inbox.sql
docs/: architecture.md
docs/decisions/: 001-async-over-sync.md  002-claim-before-execute.md  003-provider-abstraction.md
worker/: Dockerfile  main.py  pyproject.toml
worker/app/api/: router.py
worker/app/api/routes/: health.py  tasks.py
worker/app/api/schemas/: requests.py  responses.py
worker/app/application/ports/: analysis_provider.py
worker/app/application/services/: analyze_service.py  result_publisher.py
worker/app/infrastructure/clients/: callback_client.py  core_job_client.py
worker/app/infrastructure/providers/: local_provider.py  mock_provider.py
worker/app/infrastructure/storage/: object_key_policy.py  object_storage.py
worker/app/runtime/: bootstrap.py  config.py  lifespan.py
worker/app/support/: inflight.py
(+42 files in other folders)
